<resources>
    <string name="app_name">Hotel booking</string>
    <string name="excellently">Превосходно</string>
    <string name="hotel_name">Hotel name</string>
    <string name="hotel_address">Hotel address</string>
    <string name="hotel_cost">Hotel cost</string>
    <string name="about_hotel">Об отеле</string>
    <string name="select_room">Выбрать номер</string>
    <string name="hotel_description">Hotel description</string>
    <string name="conveniences">Удобства</string>
    <string name="most_necessary">Самое необходимое</string>
    <string name="description">Description</string>
    <string name="learn_more_about">Подробнее о номере</string>
    <string name="_186600">186600</string>
    <string name="_7">за 7 ночей с перелетом</string>
    <string name="bayer_warning">Эти данные никому не передаются. После оплаты мы вышлем чек на указанный вами номер и почту</string>
    <string name="phone_number">Номер телефона</string>
    <string name="post">Почта</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birth_date">Дата рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="pass_id">Номер загранпаспорта</string>
    <string name="pass_issue_date">Срок действия загранпаспорта</string>
    <string name="departure_from">Вылет из</string>
    <string name="sup">Супер!</string>
    <string name="what_include">Что включено</string>
    <string name="not_includes">Что не включено</string>
    <string name="offer_accept">Ваш заказ принят в работу</string>
    <string name="_21423423_1">Потвердение заказа №21423423 может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведрмление.</string>
    <string name="info_consumer">Информация о покупателе</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="to_paid">К оплате</string>
    <string name="service_charge">Сервисный сбор</string>
    <string name="fuel_charge">Топливный сбор</string>
    <string name="tour">Тур</string>
    <string name="to_pay">Оплатить %d \u20BD</string>
    <string name="tour_sum">%d \u20BD</string>
    <string name="fuel_sum">%d \u20BD</string>
    <string name="service_sum">%d \u20BD</string>
    <string name="total_sum">%d \u20BD</string>
</resources>