<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_marginStart="16dp"
    android:background="@drawable/rounded_15_layout_bg"
    android:orientation="vertical">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp"
    android:background="@drawable/rounded_5_layout_bg"
    android:orientation="horizontal">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:layout_marginEnd="2dp"
        app:srcCompat="@drawable/star"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        style="@style/rating_text"
        android:text="5"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewRatingDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/rating_text"
        android:text="@string/excellently"/>
</androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewHotelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/hotel_name"
        android:text="@string/hotel_name"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewHotelAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        style="@style/hotel_address"
        android:text="@string/hotel_address"
        android:focusable="true" />

</androidx.appcompat.widget.LinearLayoutCompat>