<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.hotelbooking.ui.booking.BookingViewModel" />
    </data>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_40_layout_bg"
    android:fillViewport="false"
    tools:context=".ui.booking.BookingFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/paidConstraitLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

            <include
                android:id="@+id/nameLayout"
                layout="@layout/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/rounded_15_layout_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:paddingHorizontal="16dp"
                android:background="@drawable/rounded_12_layout_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameLayout">

                <TableRow>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        style="@style/hotel_cost_per"
                        android:text="@string/departure_from" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewDepartureFrom"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/table_text"
                        android:text="Saint-Petersburg" />
                </TableRow>

                <TableRow>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        style="@style/hotel_cost_per"
                        android:text="Страна, город" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewArrival"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/table_text"
                        android:text="Египет, Хургада" />
                </TableRow>

                <TableRow>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        style="@style/hotel_cost_per"
                        android:text="Даты" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewDates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/table_text"
                        android:text="19.09.2023 - 27.09.2023" />
                </TableRow>

                <TableRow>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        style="@style/hotel_cost_per"
                        android:text="Кол-во ночей" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewNightsCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/table_text"
                        android:text="7 ночей" />
                </TableRow>

                <TableRow>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        style="@style/hotel_cost_per"
                        android:text="Отель" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewHotelName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/table_text"
                        android:text="Saint-Petersburg" />
                </TableRow>

                <TableRow>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        style="@style/hotel_cost_per"
                        android:text="Номер" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewRoomType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/table_text"
                        android:text="Стандартный" />
                </TableRow>

                <TableRow>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        style="@style/hotel_cost_per"
                        android:text="Питание" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewNutrition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/table_text"
                        android:text="Все включено" />
                </TableRow>
            </TableLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:paddingHorizontal="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/hotel_name"
                    android:text="@string/info_consumer"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="phone"
                        style="@style/hint"
                        android:hint="@string/phone_number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        style="@style/hint"
                        android:hint="@string/post" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/warning_consumer"
                    android:text="@string/bayer_warning" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        <ExpandableListView
            android:id="@+id/expandableListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:indicatorLeft="285dp"
            android:indicatorRight="335dp"
            android:groupIndicator="@drawable/group_indicator_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2" />

        <RelativeLayout
            android:id="@+id/addTouristLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expandableListView">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                style="@style/hotel_name"
                android:text="@string/add_tourist" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/addTouristBtn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:background="@color/button_bg"
                android:src="@drawable/plus" />
        </RelativeLayout>

        <TableLayout
            android:id="@+id/totalTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addTouristLinearLayout">

            <TableRow>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    style="@style/hotel_cost_per"
                    android:text="@string/tour" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewTour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/table_text"
                    android:text="@string/tour_sum" />
            </TableRow>

            <TableRow>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    style="@style/hotel_cost_per"
                    android:text="@string/fuel_charge" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewFuelCharge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/table_text"
                    android:text="@string/fuel_sum" />
            </TableRow>

            <TableRow>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    style="@style/hotel_cost_per"
                    android:text="@string/service_charge" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewServiceCharge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/table_text"
                    android:text="@string/service_sum" />
            </TableRow>

            <TableRow>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    style="@style/hotel_cost_per"
                    android:text="@string/to_paid" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/table_text"
                    android:text="@string/total_sum" />
            </TableRow>
        </TableLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearThird"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/totalTableLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pay_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/rounded_15_btn_bg"
                style="@style/btn_text"
                android:text="@string/to_pay" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>